# OiAK_Projekt

./: CMakeLists.txt  README.md  main.cpp
asmFun/: absFullChars.s  addFullChars.s  andFullChar.s  divFullChars.s  fullChar.s  fullCharToString.s  mulFullChar.s  removezeros.s
